# async-buf-read

./: Cargo.toml  LICENSE  README.md
src/: buf_read_ext.rs  buf_reader.rs  io.rs  lib.rs  passthrough.rs  peek.rs
tests/: reader.rs
