[package]
name = "async-buf-read"
version = "0.1.0"
edition = "2024"

[lib]
name = "async_buf_read"
path = "src/lib.rs"

[features]
default = ["tokio"]
tokio = ["dep:tokio"]

[dependencies]
bytes = "1"
pin-project-lite = "0.2"
tokio = { version = "1", default-features = false, optional = true }

[dev-dependencies]
tokio = { version = "1", default-features = false, features = [
  "macros",
  "rt",
  "io-util",
] }
